# Cloud-Based-Student-Registration

./: .gitignore  CMakeLists.txt  DEPLOY.md  Dockerfile  PHASE4_GUIDE.md  README.md  error.txt  fix_quotes.py  new_timetable_function.cpp  test_api.ps1  test_timetable.ps1  update_db_manager.py
backend/: AdminService.h  AuthService.h  HTTPServer.h  StudentService.h  TeacherService.h  TimetableGenerator.h  main.cpp
backend/utils/: JSONParser.h  SHA256.h
database/: BTree.h  DataModels.h  DatabaseManager.cpp  DatabaseManager.h  HashTable.h  IndexedStorage.h  Serialization.h
frontend/: APIClient.h  TESTING_GUIDE.md  admin.html  admin_cli.cpp  api.js  index.html  student.html  student_cli.cpp  styles.css  teacher.html  teacher_cli.cpp
src/: main.cpp
src/database/: database.cpp  database.h
src/datastructures/: btree.h  hashtable.h
src/server/: server.cpp
src/timetable/: timetable.cpp  timetable.h
tests/: btree_test.cpp  database_test.cpp  hashtable_test.cpp  manual_test_phase2.cpp  test_backend.cpp  test_database.cpp  test_indexed_storage.cpp  timetable_test.cpp
utils/: README_POPULATE.md  admin_enroll.cpp  enroll_batch_students.cpp  enroll_students.cpp  populate_all_semesters.cpp  populate_courses.cpp  populate_students.cpp  populate_teachers.cpp  students_data.txt  teachers_data.txt
web/: README.md  admin.html  index.html  student.html  teacher.html
web/css/: components.css  layout.css  styles.css  variables.css
web/js/: admin-dashboard.js  api-update-note.txt  api.js  auth.js  navigation.js  student-dashboard.js  student.js  teacher-dashboard.js  theme.js
